page overflow fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{margin:0;padding:0}
 body{height:100vh}
-#root{width: 100%;height: 100%; overflow-y: hidden;}
+#root{width: 100%;height: 100%;}
 
 /* #input{height: 300px} */
 
